# retractordb

./: .clang-format  .clang-tidy  .claudeignore  .dockerignore  .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DockerConan.txt  Dockerfile  Dockerfile-dbg  LICENSE  README.md  conanfile.py  embold.yaml  lgtm.yml  sonar-project.properties
docker/supervisor/: CMakeLists.txt  README.md  api.go  build.sh  go.mod  go.sum  grpc_server.go  main.go  process.go  startup.rql
examples/generator/: .gitignore  CMakeLists.txt  generator.cpp
scripts/: .gitignore  CMakeLists.txt  antlr4call.sh  buildrdb.sh  displayplan.sh  install-codex-skill.sh  plot-dev-hist.sh  plot-dev.sh  plot-dsp.sh  plot-simple.sh  plotblock.py  plothistgram.py  xdisplay  xdump.sh  xplot.sh
scripts/sublime/: retractorql.sublime-syntax
src/: .astylerc  .gitignore  CMakeLists.txt  README.md  astyle.options  config.h.in  serviceDefaults.h.in
src/UML/: System-overview-pl.drawio  System-overview.drawio  data_and_control_flow-pl.drawio  data_format.drawio  system-use-case.puml
src/abracadabra/: CRSMath.cpp  CRSMath.h  Processor.cpp  Processor.h  executorsm.cpp
src/attic/: Processor.cpp  Processor.h
src/common/: CMakeLists.txt  uxSysTermTools.cpp
src/compiler/: RQL.g4  comLauncher.cpp  compiler.cpp  compiler.hpp  parser.cpp  parser_old.cpp
src/dumper/: dumper.cpp
src/include/: .gitignore  Buffer.h  QStruct.h  RandomFile.h  SOperations.h  SOperations.hpp  cmdID.h  cmdID.hpp  commandID.h  config.h  constants.hpp  convertTypes.h  dbstream.h  enumDecl.h  fatalError.hpp  fldList.h  fldType.h  fldType.hpp  inputFileInstance.h  lockManager.hpp  tokenDef.h  tokendefset.h  uxSysTermTools.h  uxSysTermTools.hpp
src/qry/: CMakeLists.txt  README.md  formatters.cpp  formatters.hpp  ipc_transport.cpp  ipc_transport.hpp  launcher.cpp  qry.cpp  qry.hpp  qryLauncher.cpp
src/rdb/: CMakeLists.txt  DESC.g4  ICommand.hpp  README.md  cmdDropFile.cpp  cmdDropFile.hpp  cmdFieldAccess.cpp  cmdFieldAccess.hpp  cmdMeta.cpp  cmdMeta.hpp  cmdOpen.cpp  cmdOpen.hpp  cmdPayload.cpp  cmdPayload.hpp  cmdStatus.cpp  cmdStatus.hpp  cmdStorage.cpp  cmdStorage.hpp  dataset.cc  desc.cc  descriptor.cc  dsacc.cc  externalacc.cc  faccbindev.cc  faccfs.cc  faccposix.cc  faccposixprm.cc  facctxtsrc.cc  main.cpp  payload.cc  payloadacc.cc  storageacc.cc  xtrdbLauncher.cpp  xtrdbStorageMap.cpp  xtrdbStorageMap.hpp  xtrdbTypes.hpp
src/retractor/: CMakeLists.txt  CRSMath.cpp  CRSMath.h  Processor.cpp  Processor.h  QStruct.cpp  QStruct.h  README.md  RQL.g4  SOperations.cpp  allocCounter.cpp  compiler.cpp  compiler.hpp  dataModel.cpp  dataModel.h  dbstream.cpp  dbstream.h  dumper.cpp  executorsm.cpp  expressionEvaluator.cpp  expressionEvaluator.h  inputFileInstance.cpp  inputFileInstance.h  launcher.cpp  lockManager.cpp  parser.cpp
src/share/: Buffer.cpp  Buffer.h  QStruct.cpp  QStruct.h  RandomFile.cpp  RandomFile.h  SOperations.cpp  SOperations.h  convertTypes.cpp  dbstream.cpp  dbstream.h  dbstream_test.cpp  inputFileInstance.cpp  inputFileInstance.h  tokendefset.h
src/stage/: .gitignore  Expr.g4  README.md  RQL.g4  RQLLexer.g4  RQLParser.g4  antlr4-env  dacc.cc  dacc.h  desc.cc  desc.h  dsacc.cc  dsacc.h  example.txt  example_1.txt  example_2.txt  example_3.txt  example_4.txt  example_5.txt  facc.cc  facc.h  faccfs.cc  faccfs.h  faccposix.cc  faccposix.h  fainterface.h  main.cpp  payloadacc.cc  payloadacc.h
src/supervisor/: README.md  api.go  go.mod  grpc_server.go  main.go  process.go  startup.rql  tcpstream.go  ui.go
src/uiRdbApp/: README.md
src/uirdbcli/: README.md
test/: .clang-tidy  .gitignore  CMakeLists.txt  gocheck.sh  gopic.sh  gotest.sh  gotest2.sh  pattern.txt  query-fast.txt  query-file.txt  query-lnx.txt  query-thesis.txt  query.txt  storage-access-state.puml  system-use-case.puml  test-all-operators.sh  test-workflow.sh  valgrind.supp
test/Data/: CMakeLists.txt  query.rql  test-all-operators.sh  test-workflow.sh  ut_example.rql
test/DataSet/: pattern.txt  query-all.txt  query-lnx.txt  test-workflow.sh
test/IntegrationTest/: CMakeLists.txt
test/IntegrationTest_parallel/: CMakeLists.txt
test/IntegrationTest_serial/: CMakeLists.txt
test/Pattern1/: CMakeLists.txt  pattern.txt  query.rql
test/Pattern3/: CMakeLists.txt  pattern.txt  query-unfold.rql
test/Pattern4/: CMakeLists.txt
test/Pattern5/: CMakeLists.txt
test/Pattern6/: CMakeLists.txt
test/Pattern7/: pattern.txt
test/Pattern8/: data_source.txt  pattern.txt  term.script
test/Pattern9/: CMakeLists.txt  term.script
test/Regression/: CMakeLists.txt
test/UnitTest/: CMakeLists.txt  main.cpp  test_accessorFactory.cpp  test_appConfig.cpp  test_bitsetCodec.cpp  test_buffManagement.cpp  test_compiler.cpp  test_convertTypes.cpp  test_crsMath.cpp  test_dataModel.cpp  test_descriptor.cpp  test_descriptorIO.cpp  test_dumpManager.cpp  test_executor_rt.cpp  test_expeval.cpp  test_faccbindev.cpp  test_faccfs.cpp  test_faccmemory.cpp  test_faccposix.cpp  test_faccposixEintr.cpp  test_faccposixshd.cpp  test_facctxtsrc.cpp  test_fagrp.cpp  test_field.cpp  test_fileAccessor.cpp  test_formatter.cpp  test_gapDetector.cpp  test_ipc_transport.cpp  test_lockManager.cpp  test_metaData.cpp  test_metaDataStream_usage.cpp  test_metaData_usage.cpp  test_metaShadow_usage.cpp  test_payload.cpp  test_persistentCounter.cpp  test_presenter.cpp  test_qTree.cpp  test_qry.cpp  test_rdb.cpp  test_schema.cpp  (+5 more)
test/agse/: pattern.txt  term.script
test/agse1/: CMakeLists.txt  pattern.txt
test/agse2/: CMakeLists.txt  agse-decomposition.drawio  analysis.md  analysis.txt  pattern.txt  query.rql  term.script
test/agse3/: CMakeLists.txt  datafile.txt  pattern.txt  query.rql  term.script
test/consistency/: CMakeLists.txt  pattern_compile.txt  pattern_xtrdb.txt  term.script
test/dsp/: CMakeLists.txt  pattern.txt  query.rql
test/issue113_meta/: CMakeLists.txt  pattern.txt  term.script  test_db.desc
test/issue31_doc/: CMakeLists.txt  q-31.a.rql  query-31.a.rql  query-31.b.rql
test/issue42_rule/: CMakeLists.txt  (+3 more)
(+1296 files in other folders)
